// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Account Form with no data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="account name"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add description for your account"
    value=""
  />
  <button
    className="button"
  >
    Save
  </button>
</form>
`;

exports[`should render AccountForm with data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="account name"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add description for your account"
    value=""
  />
  <button
    className="button"
  >
    Save
  </button>
</form>
`;

exports[`should render error for invalid submission 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="account name"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add description for your account"
    value=""
  />
  <button
    className="button"
  >
    Save
  </button>
</form>
`;

exports[`should render error for invalid submission 2`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <p
    className="form__error"
  >
    Please fill in account
  </p>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="account name"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add description for your account"
    value=""
  />
  <button
    className="button"
  >
    Save
  </button>
</form>
`;
